# nba-database-overlay

./: .env.example  .gitignore  README.md  docker-compose.yml  nba-sql-agent-project-spec.md  pyproject.toml  render.yaml  requirements.txt
agent_service/: README.md  agent.py  db.py  main.py  schema.py  sql_guard.py  tools.py
alembic/: env.py
alembic/versions/: 43d075184e32_initial_schema.py  68dfaaff1679_add_agent_readonly_role_and_grants.py  72da97253922_add_player_season_stats_materialized_.py  c84aa018ff7e_add_play_by_play_table.py
dashboard/: README.md  app.py
db/: config.py  refresh_views.py  session.py
db/models/: __init__.py  base.py  game.py  play_by_play.py  player.py  player_game_stats.py  season.py  team.py  team_game_stats.py
ingestion/bootstrap/: clean.py  column_maps.py  extract.py  load.py  run_bootstrap.py  stage.py
ingestion/sync/: clean.py  column_maps.py  extract.py  run_sync.py
tests/: conftest.py  test_models.py
tests/agent_service/: test_main.py  test_schema.py  test_sql_guard.py
tests/ingestion/: test_clean.py
tests/sync/: test_clean.py
