[project]
name = "nba-sql-agent-platform"
version = "0.1.0"
description = "NBA SQL + agentic analytics platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "pydantic-settings>=2.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
bootstrap = ["kaggle>=1.6"]
# Declared for later phases' repo shape; not installed yet.
dashboard = ["streamlit>=1.35", "plotly>=5.22", "altair>=5.3"]
sync = ["nba_api>=1.4", "tenacity>=8.2"]
agent = ["fastapi>=0.111", "uvicorn>=0.30", "sqlglot>=25.0", "anthropic>=0.30"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# No [build-system]/packaging config: this repo is run as `python -m ...`
# from the root, not installed as a package (see repo layout in the spec --
# db/, ingestion/, dashboard/, agent_service/ are sibling top-level dirs,
# not one importable package).
